fixed spacing

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -3,7 +3,7 @@
     z-index: 3;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 80px;
     width: 100vw;
     height: 90px;
     padding-top: 20px;
