--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -7,182 +7,9 @@ html {
 }
 
 body {
-    margin: 80px 0 0 0;
+    margin: 80px auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-main,
-menu,
-nav,
-section,
-summary {
-    display: block;
-}
-
-audio,
-canvas,
-progress,
-video {
-    display: inline-block;
-}
-
-audio:not([controls]) {
-    display: none;
-    height: 0;
-}
-
-progress {
-    vertical-align: baseline;
-}
-
-[hidden],
-template {
-    display: none;
-}
-
-a {
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects;
-}
-
-a:active,
-a:hover {
-    outline-width: 0;
-}
-
-b,
-strong {
-    font-weight: inherit;
-    font-weight: bolder;
-}
-
-img {
-    border-style: none;
-}
-
-svg:not(:root) {
-    overflow: hidden;
-}
-
-code,
-kbd,
-pre,
-samp {
-    font-family: monospace, monospace;
-    font-size: 1em;
-}
-
-figure {
-    margin: 1em 40px;
-}
-
-hr {
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-    font: inherit;
-    margin: 0;
-}
-
-optgroup {
-    font-weight: 700;
-}
-
-button,
-input {
-    overflow: visible;
-}
-
-button,
-select {
-    text-transform: none;
-}
-
-[type='reset'],
-[type='submit'],
-button,
-html [type='button'] {
-    -webkit-appearance: button;
-}
-
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner,
-button::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
-}
-
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring,
-button:-moz-focusring {
-    outline: 1px dotted ButtonText;
-}
-
-fieldset {
-    border: 1px solid silver;
-    margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
-}
-
-legend {
-    box-sizing: border-box;
-    color: inherit;
-    display: table;
-    max-width: 100%;
-    padding: 0;
-    white-space: normal;
-}
-
-textarea {
-    overflow: auto;
-}
-
-[type='checkbox'],
-[type='radio'] {
-    box-sizing: border-box;
-    padding: 0;
-}
-
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
-    height: auto;
-}
-
-[type='search'] {
-    -webkit-appearance: textfield;
-    outline-offset: -2px;
-}
-
-[type='search']::-webkit-search-cancel-button,
-[type='search']::-webkit-search-decoration {
-    -webkit-appearance: none;
-}
-
-::-webkit-input-placeholder {
-    color: inherit;
-    opacity: 0.54;
-}
-
-::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    font: inherit;
 }
 
 html {
@@ -319,14 +146,20 @@ h6 {
 footer {
     display: flex;
     justify-content: center;
-    padding: 10px 0;
+    position: absolute;
+    left: 80px;
+    width: 100%;
 }
 
 .container {
-    // margin: 0 auto;
-    margin: 44px 30px 0 70px;
+    margin-left: 80px;
+}
+
+.innerContainer {
+    background: black;
+    margin: 0 auto;
+    padding: 14px 60px 20px 20px;
     max-width: 1400px;
-    padding: 20px;
 }
 
 .gatsbyLogo {
@@ -334,10 +167,4 @@ footer {
     padding-top: 3px;
     height: 20px;
     width: 20px;
-}
-
-@media only screen and (max-width: 480px) {
-    html {
-        font-size: 100%;
-    }
 }
