--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,4 +1,5 @@
 .container {
+    padding-top: 52px;
     -webkit-columns: 250px 4;
     columns: 250px 4;
     -webkit-column-gap: 20px;
