--- a/src/templates/post.module.scss
+++ b/src/templates/post.module.scss
@@ -1,9 +1,3 @@
-.container {
-    // width: auto;s
-}
-
 .pic {
-    // width: 100%;
-    max-height: 80vh;
-    margin: 20px 0;
+    max-height: 78vh;
 }
